Angepasste datenschutz (teext linksbündig)

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<section class="about">
+<section class="about datenschutz">
     <div class="container">
         <h2>Datenschutzerklärung</h2>
 
