Über mich Page (dummy) mit Sticky Button auf index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+<!-- Sticky Über-mich Banner -->
+<section class="about-banner">
+  <a href="about.html">Über mich & die Konditorei →</a>
+</section>
 
 <!-- ================================================== -->
 <!-- HERO / STARTBEREICH                                -->
