Willkommensnachricht auf index angepasst

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
 <section class="about" id="about">
     <div class="container">
-        <h2>Über unsere Konditorei</h2>
-        <p>
-            Seit über 20 Jahren verwöhnen wir unsere Kunden mit handgemachten Torten,
-            Kuchen und süßen Spezialitäten. Jedes Produkt wird mit Liebe hergestellt.
+        <h2>Willkommen</h2>
+        <p>In der Mondschein Konditorei entstehen süße Kreationen,
+die Genuss, Ästhetik und Handwerkskunst vereinen.
+Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und Liebe zum Detail.
         </p>
     </div>
 </section>
