--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
 
         <div class="product-grid">
             <div class="product-item">
-                <img src="https://placehold.co/300x200/FFB6C1/000000?text=Schokotorte" alt="Schokoladentorte">
+                <img src="assets/Hochzeitstorte bearbeitet.jpeg" alt="Hochzeitstorte">
                 <h3>Hochzeitstorte</h3>
             </div>
 
             <div class="product-item">
-                <img src="https://placehold.co/300x200/FFD700/000000?text=Obstkuchen" alt="Obstkuchen">
+                <img src="assets/Torte Bearbeitet.jpeg" alt="Torten">
                 <h3>Torten</h3>
             </div>
 
