--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
 
             <div class="product-item">
                 <div class="product-image">
-                    <img src="assets/Torte Bearbeitet.jpeg" alt="Torten">
+                    <img src="assets/Torte bearbeitet.jpeg" alt="Torten">
                 </div>
                 <h3 class="product-name">Torten</h3>
             </div>
