fix für about me button

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="about.html" class="floating-about-btn">
-  Über uns
+    <a href="about.html" class="cta-button floating-cta">
+  Über mich
 </a>
 
 <!-- Sticky Über-mich Banner -->
