--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>Handgemachte Köstlichkeiten für jeden Anlass</p>
 
         <!-- Call-to-Action -->
-        <a href="#order" class="cta-button">Jetzt bestellen</a>
+        <a href="bestellung.html" class="cta-button">Jetzt bestellen</a>
     </div>
 </section>
 
