--- a/bestellung.html
+++ b/bestellung.html
@@ -46,7 +46,7 @@
           <textarea name="message" rows="5" required></textarea>
         </label>
 
-        <button type="submit" class="cta-button">
+        <button type="submit" class="submit-button">
           Anfrage senden
         </button>
 
