--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
 
             <div class="product-item">
                 <div class="product-image">
-                    <img src="https://placehold.co/300x200/87CEEB/000000?text=Macarons" alt="Macarons">
+                    <img src="assets/Macarons.jpeg" alt="Macarons">
                 </div>
                 <h3 class="product-name">Macarons</h3>
             </div>
