Petit Fours-Bild hinzugefügt und Bildquelle im Produktbereich aktualisiert

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
 
             <div class="product-item">
                 <div class="product-image">
-                    <img src="https://placehold.co/300x200/FF69B4/FFFFFF?text=Cupcakes" alt="Cupcakes">
+                    <img src="assets/Petit Fours.jpeg" alt="Petit Fours">
                 </div>
-                <h3 class="product-name">Cupcakes</h3>
+                <h3 class="product-name">Petit Fours</h3>
             </div>
 
             <div class="product-item">
