Galerie-Seite hinzugefügt und Galerie-Button auf der Startseite integriert

--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
                 <h3 class="product-name">Macarons</h3>
             </div>
 
+            <!-- Galerie Button -->
+            <div class="gallery-cta">
+                <a href="gallery.html" class="cta-button outline">
+                    Zur Galerie
+                </a>
+            </div>
+
         </div>
     </div>
 </section>
