Galerie-Seite erstellt und Bilder dynamisch geladen; CSS-Anpassungen für das Grid-Layout vorgenommen

--- a/gallery.html
+++ b/gallery.html
@@ -20,14 +20,16 @@
         Eine Auswahl meiner Kreationen – zur Inspiration und Orientierung.
       </p>
 
-      <div class="gallery-grid">
-        <img src="images/gallery1.jpg" alt="Torte Hochzeit">
-        <img src="images/gallery2.jpg" alt="Dessert">
-        <img src="images/gallery3.jpg" alt="Petit Fours">
-        <img src="images/gallery4.jpg" alt="Moderne Torte">
-        <img src="images/gallery5.jpg" alt="Schokoladendessert">
-        <img src="images/gallery6.jpg" alt="Feine Pâtisserie">
-      </div>
+      <section class="gallery">
+  <div class="container">
+    <h1>Galerie</h1>
+
+    <div id="gallery-grid" class="gallery-grid"></div>
+  </div>
+</section>
+
+<script src="gallery.js"></script>
+
 
     </div>
   </main>
