Verschachtelund des Gallary grid aufgehiben, Fehler im gallary.html

--- a/gallery.html
+++ b/gallery.html
@@ -20,19 +20,12 @@
         Eine Auswahl meiner Kreationen – zur Inspiration und Orientierung.
       </p>
 
-      <section class="gallery">
-  <div class="container">
-    <h1>Galerie</h1>
-
-    <div id="gallery-grid" class="gallery-grid"></div>
-  </div>
-</section>
-
-<script src="gallery.js"></script>
-
+      <!-- Galerie Grid -->
+      <div id="gallery-grid" class="gallery-grid"></div>
 
     </div>
   </main>
 
+  <script src="gallery.js"></script>
 </body>
 </html>
