--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
   <title>Galerie – Mondschein Konditorei</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="gallery-page">
 
   <!-- Floating Button zurück -->
@@ -28,5 +29,16 @@
   </main>
 
   <script src="gallery.js"></script>
+
+  <script>
+  const cta = document.querySelector('.floating-cta');
+
+  if (cta) {
+    window.addEventListener('scroll', () => {
+      cta.classList.toggle('scrolled', window.scrollY > 20);
+    });
+  }
+</script>
+
 </body>
 </html>
