ACHTUNG änderung an den Buttons im css um einhaitlicher zu werden

--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
 <body>
 
   <!-- Sticky Über-mich Banner -->
-  
-    <a href="index.html" class="cta-button floating-cta">
+
+    <a href="index.html" class="floating-cta">
     Startseite
     </a>
 
@@ -74,6 +74,16 @@ Sie wirkt leise – und bleibt.
 
     </div>
   </main>
+  
+<script>
+  const cta = document.querySelector('.floating-cta');
+
+  if (cta) {
+    window.addEventListener('scroll', () => {
+      cta.classList.toggle('scrolled', window.scrollY > 20);
+    });
+  }
+</script>
 
 </body>
 </html>
