--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
 <body class="gallery-page">
 
   <!-- Floating Button zurück -->
-  <a href="index.html" class="cta-button floating-cta">
+  <a href="index.html" class="floating-cta">
     Startseite
   </a>
 
