Füge die Klasse 'cta-button' zu mehreren Floating CTA Buttons hinzu, um das Styling zu vereinheitlichen und die Benutzererfahrung zu verbessern.

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
   <!-- Sticky Über-mich Banner -->
 
-    <a href="index.html" class="floating-cta">
+    <a href="index.html" class="cta-button floating-cta">
     Startseite
     </a>
 
