--- a/datenschutz.html
+++ b/datenschutz.html
@@ -111,7 +111,7 @@
         </p>
 
         <p style="margin-top:40px;">
-            <a href="index.html" class="floating-cta">← Zurück zur Startseite</a>
+            <a href="index.html" class="cta-button floating-cta">← Zurück zur Startseite</a>
         </p>
     </div>
 </section>
