--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,7 @@
   <a href="index.html" class="cta-button floating-cta">
     Startseite
   </a>
+  <div class="page-wrapper">
 
   <main class="gallery">
     <div class="container">
@@ -27,6 +28,7 @@
 
     </div>
   </main>
+  </div>
 
   <script src="gallery.js"></script>
 
