--- a/bestellung.html
+++ b/bestellung.html
@@ -9,7 +9,7 @@
 <body>
 
   <!-- Floating Zurück Button -->
-  <a href="index.html" class="floating-cta">
+  <a href="index.html" class="cta-button floating-cta">
     Startseite
   </a>
 
