Füge die Klasse 'page-wrapper' zu mehreren HTML-Dateien hinzu, um die Struktur zu verbessern und das Layout zu vereinheitlichen.

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <a href="index.html" class="cta-button floating-cta">
     Startseite
     </a>
+    <div class="page-wrapper">
 
 
   <!-- Hauptinhalt -->
@@ -74,6 +75,7 @@ Sie wirkt leise – und bleibt.
 
     </div>
   </main>
+  </div>
   
 <script>
   const cta = document.querySelector('.floating-cta');
