--- a/datenschutz.html
+++ b/datenschutz.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="page-wrapper">
 <section class="about datenschutz">
     <div class="container">
         <h2>Datenschutzerklärung</h2>
@@ -115,7 +115,7 @@
         </p>
     </div>
 </section>
-
+</div>
 <script>
   const cta = document.querySelector('.floating-cta');
 
