--- a/impressum.html
+++ b/impressum.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p style="margin-top:40px;">
+            <a href="index.html" class="cta-button floating-cta">← Zurück zur Startseite</a>
+        </p>
+    <div class="page-wrapper">
 
 <section class="about impressum">
     <div class="container">
@@ -46,12 +50,10 @@
             12345 Musterstadt
         </p>
 
-        <p style="margin-top:40px;">
-            <a href="index.html" class="cta-button floating-cta">← Zurück zur Startseite</a>
-        </p>
+        
     </div>
 </section>
-
+    </div>
 <script>
   const cta = document.querySelector('.floating-cta');
 
