--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a href="about.html" class="cta-button floating-cta">
   Über mich
 </a>
+<div class="page-wrapper">
 
 <!-- ================================================== -->
 <!-- HERO / STARTBEREICH                                -->
@@ -104,6 +105,7 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
         </div>
     </div>
 </section>
+</div>
 
 <footer class="footer">
     <div class="container">
