--- a/bestellung.html
+++ b/bestellung.html
@@ -12,6 +12,7 @@
   <a href="index.html" class="cta-button floating-cta">
     Startseite
   </a>
+  <div class="page-wrapper">
 
   <main class="page form-page">
     <div class="container">
@@ -55,7 +56,7 @@
 
     </div>
   </main>
-  
+  </div>
 <script>
   const cta = document.querySelector('.floating-cta');
 
