--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
 
             <div class="product-item">
                 <div class="product-image">
-                    <img src="assets/Torte bearbeitet.jpeg" alt="Torten">
+                    <img src="assets/Torte.jpeg" alt="Torten">
                 </div>
                 <h3 class="product-name">Torten</h3>
             </div>
 
             <div class="product-item">
                 <div class="product-image">
-                    <img src="assets/Petit Fours.jpeg" alt="Petit Fours">
+                    <img src="assets/Suesse Fours.jpeg" alt="Petit Fours">
                 </div>
                 <h3 class="product-name">Petit Fours</h3>
             </div>
