about angepasst, rechtschreibfehler in bestellung ausgebssert

--- a/bestellung.html
+++ b/bestellung.html
@@ -101,7 +101,7 @@
         </label>
 
         <label>
-          Gelifert kann in einem Umkreis von 30km um Schwaan in MV.
+          Geliefert werden kann in einem Umkreis von 30km um Schwaan in MV.
         </label>
 
         <label>
