--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
       <section class="about-person">
         <h2>Über mich</h2>
         <p>Hinter der Mondschein Konditorei stehe ich,
-mit einer großen Leidenschaft für feine Desserts und modernes Konditorhandwerk.
+Johanna Rhode Geboren 1998 im wunderschönen Stralsund. 2021 habe ich meinen Konditormeister in Berlin erfolgreich abgeschlossen.
 <br>
 Was mich antreibt, ist der Wunsch, Menschen mit besonderen Geschmackserlebnissen zu berühren –
 leise, elegant und unvergesslich, wie ein Moment im Mondschein.
@@ -47,7 +47,7 @@ leise, elegant und unvergesslich, wie ein Moment im Mondschein.
         <p>Die Mondschein Konditorei steht für moderne Klassiker und feine Pâtisserie: <br>
             <ul>
   <li>Individuelle Torten für besondere Anlässe</li>
-  <li>Elegante Desserts & Petit Fours</li>
+  <li>Elegante Desserts & süße Fours</li>
   <li>Moderne Interpretationen klassischer Kuchen</li>
   <li>Maßgeschneiderte Sweet Concepts</li>
 </ul>
