Bestellung von "Sie" zum "du"

--- a/bestellung.html
+++ b/bestellung.html
@@ -19,8 +19,8 @@
 
       <h1>Jetzt bestellen</h1>
       <p>
-        Erzählen Sie mir von Ihrer Wunschkreation –  
-        ich melde mich persönlich bei Ihnen zurück.
+        Erzähle mir von deiner Wunschkreation –  
+        ich melde mich persönlich bei dir zurück.
       </p>
 
       <!-- Formspree Formular -->
