bilder entfernt, rechtschreibfehler korrigiert

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
       <section class="about-person">
         <h2>Über mich</h2>
         <p>Hinter der Mondschein Konditorei stehe ich,
-Johanna Rhode Geboren 1998 im wunderschönen Stralsund. 2021 habe ich meinen Konditormeister in Berlin erfolgreich abgeschlossen.
+Johanna Rohde 1998 geboren im wunderschönen Stralsund. 2021 habe ich meinen Konditormeister in Berlin erfolgreich abgeschlossen.
 <br>
 Was mich antreibt, ist der Wunsch, Menschen mit besonderen Geschmackserlebnissen zu berühren –
 leise, elegant und unvergesslich, wie ein Moment im Mondschein.
