Lightbox-System implementiert und CSS für Galerie optimiert

--- a/bestellung.html
+++ b/bestellung.html
@@ -44,18 +44,13 @@
         </label>
 
         <label>
-          Datum der Veranstaltung
-          <input type="date" name="event_date">
-        </label>
-
-        <label>
           Produktart
           <select name="product_type" required>
             <option value="" disabled selected>Bitte wählen</option>
             <option value="Torte">Torte</option>
             <option value="Kuchen">Kuchen</option>
             <option value="Cupcakes">Cupcakes</option>
-            <option value="Plätzchen">Plätzchen</option>
+            <option value="Süße Fours">Süße Fours</option>
             <option value="Sonstiges">Sonstiges</option>
           </select>
         </label> 
