--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
+<!-- Lightbox Overlay -->
+<div id="lightbox" class="lightbox hidden">
+  <div class="lightbox-backdrop"></div>
+  <img id="lightbox-img" src="" alt="Großansicht">
+</div>
+
 <body class="gallery-page">
 
   <!-- Floating Button zurück -->
