--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
                 <a href="gallery.html" class="cta-button outline">
                     Zur Galerie
                 </a>
+                <a href="kostentabelle.html" class="cta-button outline">
+                    Kostentabelle
+                </a>
             </div>
 
         </div>
