Kommentar in index.html hinterlegt

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
             </div>
 
             
-
+        <!-- Buttons unterhalb des Product-grid -->
         </div>
         <!-- Galerie Button -->
             <div class="gallery-cta">
