Web3Forms durch Submify ersretzt

--- a/bestellung.html
+++ b/bestellung.html
@@ -23,14 +23,14 @@
         ich melde mich persönlich bei dir zurück.
       </p>
 
-      <!-- Web3Forms Formular -->
-      <form action="https://api.web3forms.com/submit"
+      <!-- Submify Formular -->
+      <form action="https://submify.vercel.app/maxschulze1214@hotmail.de"
             method="POST"
             enctype="multipart/form-data"
             class="order-form">
         <!-- Web3Forms API Key -->
-        <input type="hidden" name="access_key" value="5aadd189-2596-4005-a08b-9b1ac831f088">
-
+        <!--  <input type="hidden" name="access_key" value="tly-8icv1jv7soEpmGGJDUpk81YRV6HwJz64">
+        -->
         <label>
           Name
           <input type="text" name="name" required>
