Füge Pflichtfelder zu Bestellformular hinzu und aktualisiere Dateigrößenbeschränkung

--- a/bestellung.html
+++ b/bestellung.html
@@ -31,18 +31,19 @@
         <!-- Web3Forms API Key -->
         <!--  <input type="hidden" name="access_key" value="tly-8icv1jv7soEpmGGJDUpk81YRV6HwJz64">
         -->
+        <label> Felder mit * sind Pflichtfelder</label>
         <label>
-          Name
+          *Name
           <input type="text" name="name" required>
         </label>
 
         <label>
-          E-Mail
+          *E-Mail
           <input type="email" name="email" required>
         </label>
 
         <label>
-          Produktart
+          *Produktart
           <select name="product_type" required>
             <option value="" disabled selected>Bitte wählen</option>
             <option value="Torte">Torte</option>
@@ -54,17 +55,17 @@
         </label> 
 
         <label>
-          Geschmacksrichtung
+          *Geschmacksrichtung
           <input type="text" name="flavor" required>
         </label>
         
         <label>
-          Größe / Menge
+          *Größe / Menge
           <input type="text" name="size_quantity" required>
         </label>
 
         <label>
-          Alkohol
+          *Alkohol
           <div class="radio-group">
             <label class="radio-option">
               <input type="radio" name="alcohol" value="Mit Alkohol" required>
@@ -89,7 +90,7 @@
         </label>  
 
         <label>
-          Abhol- oder Lieferdatum
+          *Abhol- oder Lieferdatum
           <input type="date" name="pickup_delivery_date" required>
         </label>
 
@@ -98,7 +99,7 @@
         </label>
 
         <label>
-          Telefonnummer
+          *Telefonnummer
           <input type="tel" name="phone" required>
         </label>
 
@@ -118,15 +119,14 @@
           type="file"
           name="reference_image"
           accept="image/png, image/jpeg, image/jpg, image/gif"
-          id="imageUpload"
-          multiple>        
+          id="imageUpload">        
         </label>
         <div id="imagePreview" class="image-preview"></div>
         <div id="uploadError" class="upload-error"></div>
 
-        <label> max. 10 MB pro Bild 
+        <label> max. 5 MB pro Bild 
           <br>
-           max. 3 Bilder</label>
+           max. 1 Bilder</label>
         
         <button type="submit" class="submit-button">
           Anfrage senden
@@ -166,45 +166,42 @@ function clearError() {
   }
 }
 
-  const uploadInput = document.getElementById('imageUpload');
-  const preview = document.getElementById('imagePreview');
-
-  const MAX_FILE_SIZE = 10 * 1024 * 1024; // 10 MB
-  const MAX_IMAGES = 3; // Maximal 3 Bilder
-  let selectedFiles = []; // Array zur Speicherung der ausgewählten Dateien
-
-  if (uploadInput) {
-  uploadInput.addEventListener('change', () => {
+uploadInput.addEventListener('change', () => {
   clearError();
 
-  const newFiles = Array.from(uploadInput.files);
+  const file = uploadInput.files[0];
 
-  for (const file of newFiles) {
-    if (selectedFiles.length >= MAX_IMAGES) {
-      showError('Maximal 3 Bilder erlaubt.');
-      break;
-    }
+  // Preview leeren
+  preview.innerHTML = '';
 
-    if (file.size > MAX_FILE_SIZE) {
-      showError('Ein Bild ist größer als 10 MB.');
-      continue;
-    }
+  if (!file) return;
 
-    if (!file.type.startsWith('image/')) {
-      showError('Bitte nur Bilddateien hochladen.');
-      continue;
-    }
+  const MAX_FILE_SIZE = 5 * 1024 * 1024; // 5 MB
 
-    selectedFiles.push(file);
-
-    const img = document.createElement('img');
-    img.src = URL.createObjectURL(file);
-    preview.appendChild(img);
+  // ❌ Dateigröße prüfen
+  if (file.size > MAX_FILE_SIZE) {
+    showError('Das Bild darf maximal 5 MB groß sein.');
+    uploadInput.value = '';
+    return;
   }
 
-  uploadInput.value = '';
+  // ❌ Typ prüfen
+  if (!file.type.startsWith('image/')) {
+    showError('Bitte nur Bilddateien hochladen.');
+    uploadInput.value = '';
+    return;
+  }
+
+  // ✅ Vorschau anzeigen
+  const img = document.createElement('img');
+  img.src = URL.createObjectURL(file);
+  img.style.maxWidth = '300px';
+
+  preview.appendChild(img);
 });
-    }
+
+
+
   
 </script>
 
