Datenschutz und Impressum - Inhalt angepasst, Floating CTA Button angepasst. (Beschreibung der einzelnen Button Eigenschaften)

--- a/impressum.html
+++ b/impressum.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p style="margin-top:40px;">
-            <a href="index.html" class="cta-button floating-cta">← Zurück zur Startseite</a>
-        </p>
+    <!-- Floating button um zur Startseite zurückzukehren (sichtbar beim scrollen) -->
+            <a href="index.html" class="cta-button floating-cta">Startseite</a>
+        
     <div class="page-wrapper">
 
-<section class="about impressum">
+<section class="legal-page">
     <div class="container">
         <h2>Impressum</h2>
 
@@ -26,11 +26,6 @@
         Ludwig-Erhard-Straße 18
         20459 Hamburg
 <br>
-        Kontaktdaten:
-<br>
-        E-Mail: info@mondschein-konditorei.de
-        
-
         <p>
             <strong>Kontakt:</strong><br>
             E-Mail: info@mondschein-konditorei.de
