--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Floating button um zur aboutseite zugelangen (sichtbar beim scrollen) -->
     <a href="about.html" class="cta-button floating-cta">
   Über mich
 </a>
