--- a/impressum.html
+++ b/impressum.html
@@ -22,9 +22,10 @@
         <p>     
         Mondschein Konditorei
 <br>
-        c/o IP-Management #8780
-        Ludwig-Erhard-Straße 18
-        20459 Hamburg
+        c/o IP-Management #8780<br>
+        Ludwig-Erhard-Straße 18<br>
+        20459 Hamburg<br>
+        Deutschland<br>
 <br>
         <p>
             <strong>Kontakt:</strong><br>
