--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
         <div class="footer-links">
             <a href="impressum.html">Impressum</a>
             <a href="datenschutz.html">Datenschutz</a>
-            <a href="#">Kontakt</a>
+            <!-- <a href="#">Kontakt</a> -->
         </div>
         <p>&copy; 2025 Mondschein Konditorei</p>
     </div>
