--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
 
         <div class="product-grid">
 
-            <div class="product-item">
+            <div class="soft-glass-card">
                 <div class="product-image">
                     <img src="assets/Hochzeitstorte bearbeitet.jpeg" alt="Hochzeitstorte">
                 </div>
