überflüssige @mobile Galerie-Stilregeln entfernt um "Masonry" (Pinterest) stile zu bekommen

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
                 <h3 class="product-name">Hochzeitstorte</h3>
             </div>
 
-            <div class="product-item">
+            <div class="soft-glass-card">
                 <div class="product-image">
                     <img src="assets/Torte.jpeg" alt="Torten">
                 </div>
