Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Jedes Stück ist ein kleines Kunstwerk – geschaffen mit Ruhe, Präzision und L
 
             <div class="soft-glass-card">
                 <div class="product-image">
-                    <img src="assets/Torte.jpeg" alt="Torten">
+                    <img src="assets/Torte.jpeg" alt="Torte">
                 </div>
                 <h3 class="product-name">Torten</h3>
             </div>
